tests/fixtures/errors/division_by_zero.lazy
result = 10 / 0
result
